samples/_failures_safe/1761422544_64bdc6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8541c8c4.c: In function ‘main’:
./samples/SAFE/__tmp_8541c8c4.c:149:9: error: expected declaration or statement at end of input
  149 |         destroy_matrix(&a);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_8541c8c4.c:149:9: error: expected declaration or statement at end of input
